--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,7 +141,11 @@ header .big-size-container .row .icons .box .device_box .box_device li .info {
   padding: 20px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .info p {
-  font-size: 12px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+header .big-size-container .row .icons .box .device_box .box_device li .info span {
+  font-size: 14px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .cart-sticky {
   position: fixed;
@@ -1039,7 +1043,11 @@ header .big-size-container .row .icons .box .device_box .box_device li .info {
   padding: 20px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .info p {
-  font-size: 12px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+header .big-size-container .row .icons .box .device_box .box_device li .info span {
+  font-size: 14px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .cart-sticky {
   position: fixed;
@@ -2076,7 +2084,11 @@ header .big-size-container .row .icons .box .device_box .box_device li .info {
   padding: 20px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .info p {
-  font-size: 12px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+header .big-size-container .row .icons .box .device_box .box_device li .info span {
+  font-size: 14px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .cart-sticky {
   position: fixed;
@@ -3091,7 +3103,11 @@ header .big-size-container .row .icons .box .device_box .box_device li .info {
   padding: 20px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .info p {
-  font-size: 12px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+header .big-size-container .row .icons .box .device_box .box_device li .info span {
+  font-size: 14px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .cart-sticky {
   position: fixed;
@@ -4061,7 +4077,11 @@ header .big-size-container .row .icons .box .device_box .box_device li .info {
   padding: 20px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .info p {
-  font-size: 12px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+header .big-size-container .row .icons .box .device_box .box_device li .info span {
+  font-size: 14px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .cart-sticky {
   position: fixed;
@@ -5629,7 +5649,11 @@ header .big-size-container .row .icons .box .device_box .box_device li .info {
   padding: 20px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .info p {
-  font-size: 12px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+header .big-size-container .row .icons .box .device_box .box_device li .info span {
+  font-size: 14px;
 }
 header .big-size-container .row .icons .box .device_box .box_device li .cart-sticky {
   position: fixed;
