--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -142,7 +142,11 @@ header {
                 .info {
                   padding: 20px;
                   p {
-                    font-size: 12px;
+                    margin-top: 20px;
+                    font-size: 16px;
+                  }
+                  span{
+                    font-size: 14px;
                   }
                 }
                 .cart-sticky {
