--- a/assets/scss/_collections.scss
+++ b/assets/scss/_collections.scss
@@ -113,13 +113,12 @@
           position: absolute;
         }
         .img {
-            width: 0;
-            height: 0;
-            top: 160px;
-            left: 145px;
+          width: 0;
+          height: 0;
+          top: 160px;
+          left: 145px;
           transition: 0.5s all;
           position: absolute;
-        
         }
         &:hover {
           .img {
@@ -129,7 +128,6 @@
             left: 0;
             transform: rotateZ(180deg);
             background-color: #9c96963f;
-            
           }
         }
       }
@@ -144,108 +142,479 @@
       }
     }
   }
-  .right {
-    .device {
-      padding: 0px;
-      height: 270px;
-      position: relative;
-      position: relative;
-      .image {
-        height: 100%;
+  .first_page {
+    display: none;
+    .right {
+      .device {
+        padding: 0px;
+        height: 270px;
         position: relative;
-        img {
-          width: 100%;
-          height: 100%;
-        }
 
-        .first {
-          position: absolute;
-          opacity: 1;
-          transition: 1s all;
-        }
-        .second {
-          position: absolute;
-          opacity: 0;
-          transition: 1s all;
-        }
-        &:hover {
+        .image {
+          height: 100%;
+          position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+
           .first {
-            opacity: 0;
-            transform: rotateY(180deg);
+            position: absolute;
+            opacity: 1;
+            transition: 1s all;
           }
           .second {
-            opacity: 1;
-            transform: rotateY(180deg);
+            position: absolute;
+            opacity: 0;
+            transition: 1s all;
           }
-        }
-        cursor: pointer;
-      }
-      .rating {
-        position: absolute;
-        bottom: 8px;
-        left: 50%;
-        transform: translateX(-50%);
-        .yellow {
-          color: yellow;
-        }
-      }
-      .buttons {
-        position: absolute;
-        left: auto;
-        right: 13px;
-        top: -36px;
-        display: block;
-        .allbutton {
-          border: 1px solid black;
-          padding: 8px;
-          border-radius: 50%;
-          margin-top: 5px;
-          opacity: 0;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: 0.5s all;
-          cursor: pointer;
           &:hover {
-            background-color: #eb4d4b;
+            .first {
+              opacity: 0;
+              transform: rotateY(180deg);
+            }
+            .second {
+              opacity: 1;
+              transform: rotateY(180deg);
+            }
+          }
+          cursor: pointer;
+        }
+        .rating {
+          position: absolute;
+          bottom: 8px;
+          left: 50%;
+          transform: translateX(-50%);
+          .yellow {
+            color: yellow;
           }
         }
-      }
-      .allbutton.active {
-        opacity: 1;
+        .buttons {
+          position: absolute;
+          left: auto;
+          right: 13px;
+          top: -36px;
+          display: block;
+          .allbutton {
+            border: 1px solid black;
+            padding: 8px;
+            border-radius: 50%;
+            margin-top: 5px;
+            opacity: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 0.5s all;
+            cursor: pointer;
+            &:hover {
+              background-color: #eb4d4b;
+            }
+          }
+        }
+        .allbutton.active {
+          opacity: 1;
+        }
+        .caption {
+          padding: 10px;
+          .add_cart {
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #eb4d4b;
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%);
+            bottom: -77px;
+            transition: 0.5s all;
+            overflow: hidden;
+            opacity: 0;
+            height: 35px;
+            width: 120px;
+            cursor: pointer;
+          }
+          .add_cart.active {
+            opacity: 1;
+          }
+          .description {
+            margin-bottom: 10px;
+          }
+          .price {
+            color: #eb4d4b;
+            font-size: 16px;
+            margin-bottom: 5px;
+            transition: all 0.4s;
+            opacity: 1;
+          }
+        }
       }
     }
-    .caption {
-      padding: 10px;
-      .add_cart {
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #eb4d4b;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
-        bottom: -77px;
-        transition: 0.5s all;
+  }
+  .layout {
+    background-color: rgba(230, 230, 230, 0.493);
+    margin: 0 10px;
+
+    .icons {
+      padding: 20px 0 0 25px;
+      overflow: hidden;
+
+      .gridList {
+        &:hover i {
+          transform: rotateY(360deg);
+        }
+
+        i {
+          overflow: hidden;
+          color: #333;
+          padding: 2px 6px;
+          font-size: 20px;
+          cursor: pointer;
+          transition: 0.3s;
+          animation-duration: 0.2s;
+
+          @media screen and (max-width: 821px) {
+            font-size: 18px;
+          }
+        }
+      }
+
+      p {
+        margin-left: 6px;
+
+        a {
+          color: #333;
+          text-decoration: none;
+          transition: 0.3s;
+
+          &:hover {
+            color: #eb4d4b;
+          }
+        }
+      }
+    }
+    .sort_show {
+      align-items: center;
+
+      div {
+        @media screen and (max-width: 391px) {
+          margin-bottom: 17px;
+        }
+
+        label {
+          margin: 0 10px 0 18px;
+          font-size: 15px;
+          color: #333;
+
+          @media screen and (max-width: 821px) {
+            font-size: 13px;
+          }
+        }
+
+        select {
+          border: 1px solid lightgray;
+          color: gray;
+          font-size: 15px;
+          padding: 2px;
+
+          @media screen and (max-width: 821px) {
+            font-size: 12px;
+          }
+
+          &:focus {
+            outline: none;
+          }
+
+          option {
+            color: gray;
+          }
+        }
+      }
+    }
+  }
+
+  .second_page {
+    .devices{
+      .device {
+        position: relative;
+        top: 15px;
         overflow: hidden;
-        opacity: 0;
-        height: 35px;
-        width: 120px;
-        cursor: pointer;
-      }
-      .add_cart.active {
-        opacity: 1;
-      }
-      .description {
-        margin-bottom: 10px;
-      }
-      .price {
-        color: #eb4d4b;
-        font-size: 16px;
-        margin-bottom: 5px;
-        transition: all 0.4s;
-        opacity: 1;
+        margin: 15px 0;
+
+     
+
+        .device_icons {
+          position: absolute;
+          z-index: 1;
+          left: 248px;
+          top: 0;
+
+          @media screen and (max-width: 821px) {
+            & {
+              left: 25px;
+            }
+          }
+
+          @media screen and (max-width: 391px) {
+            & {
+              top: 2px;
+              right: 6px;
+            }
+          }
+
+          div {
+            cursor: pointer;
+            display: none;
+            width: 36px;
+            height: 36px;
+            margin-top: 10px;
+            background-color: white;
+            text-align: center;
+            border-radius: 50%;
+            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+            transition: 0.5s;
+
+            @media screen and (max-width: 821px) {
+              & {
+                width: 33px;
+                height: 33px;
+              }
+            }
+
+            @media screen and (max-width: 391px) {
+              & {
+                width: 15px;
+                height: 15px;
+                margin-top: 7px;
+              }
+            }
+
+            &:hover {
+              background-color: #eb4d4b;
+              color: white;
+            }
+
+            i {
+              margin-top: 10px;
+              font-size: 20px;
+
+              @media screen and (max-width: 821px) {
+                & {
+                  font-size: 15px;
+                }
+              }
+
+              @media screen and (max-width: 391px) {
+                & {
+                  position: relative;
+                  top: -8px;
+                  font-size: 7px;
+                  margin-top: 0;
+                }
+              }
+            }
+          }
+        }
+
+        .image {
+          overflow: hidden;
+          position: relative;
+          width: 289.98px;
+          height: 289.98px;
+
+          @media screen and (max-width: 821px) {
+            & {
+              width: 230px;
+              height: 230px;
+            }
+          }
+
+          @media screen and (max-width: 391px) {
+            & {
+              width: 180px;
+              height: 180px;
+            }
+          }
+
+          .first {
+            object-fit: contain;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transition: 0.7s;
+            cursor: pointer;
+          }
+
+          .second {
+            position: absolute;
+            opacity: 0;
+            width: 100%;
+            height: 100%;
+            transition: 0.7s;
+          }
+          &:hover {
+            .first {
+              opacity: 0;
+              transform: rotateY(180deg);
+            }
+            .second {
+              opacity: 1;
+              transform: rotateY(180deg);
+            }
+          }
+        }
+
+        .icons {
+          position: absolute;
+          top: 260px;
+          font-size: 13px;
+          width: 100%;
+          left: 110px;
+
+          @media screen and (max-width: 821px) {
+            & {
+              top: 300px;
+              font-size: 13px;
+              width: 100%;
+              left: 145px;
+              z-index: 2;
+            }
+          }
+
+          @media screen and (max-width: 391px) {
+            & {
+              top: 155px;
+              width: 100%;
+              left: 77px;
+              z-index: 2;
+            }
+          }
+
+          i {
+            color: #b6b6b6;
+
+            @media screen and (max-width: 821px) {
+              & {
+                font-size: 10px;
+              }
+            }
+
+            @media screen and (max-width: 391px) {
+              & {
+                font-size: 6px;
+              }
+            }
+          }
+
+          .yellow {
+            color: #fec42d;
+          }
+        }
+
+        .description {
+          padding: 13px;
+          position: relative;
+
+          .title {
+            cursor: pointer;
+
+            @media screen and (max-width: 821px) {
+              & {
+                font-size: 13px;
+              }
+            }
+
+            @media screen and (max-width: 821px) {
+              & {
+                font-size: 8px;
+              }
+            }
+          }
+
+          .about {
+            color: gray;
+          }
+
+          .prices {
+            font-weight: 600;
+            color: #eb4d4b;
+
+            @media screen and (max-width: 821px) {
+              & {
+                font-size: 12px;
+              }
+            }
+
+            @media screen and (max-width: 391px) {
+              & {
+                font-size: 8px;
+              }
+            }
+          }
+
+          .price {
+            display: flex;
+
+            cursor: pointer;
+
+            .notPrice {
+              margin: 0 7px;
+              color: #787878;
+              text-decoration: initial;
+            }
+          }
+
+          .add_cart {
+            opacity: 1;
+            position: absolute;
+            top: 150px;
+            left: 20px;
+            background-color: #eb4d4b;
+            height: 37px;
+            cursor: pointer;
+            transition: 0.5s;
+
+            @media screen and (max-width: 821px) {
+              & {
+                top: 17px;
+                left: 126px;
+                height: 24px;
+                width: 90px;
+              }
+            }
+
+            @media screen and (max-width: 391px) {
+              & {
+                top: 20px;
+                left: 53px;
+                height: 18px;
+                width: 66px;
+              }
+            }
+
+            &:hover {
+              background-color: #333;
+            }
+
+            p {
+              color: white;
+              padding: 6px 20px;
+
+              @media screen and (max-width: 821px) {
+                & {
+                  padding: 6px 17px;
+                  font-size: 10px;
+                }
+              }
+
+              @media screen and (max-width: 821px) {
+                & {
+                  padding: 3px 10px;
+                  font-size: 8px;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
